<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_seed_settings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_seed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_seed"
                android:gravity="center"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/text_seed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberSigned"
                android:importantForAutofill="no"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_settings"
                android:gravity="center"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/text_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textCapCharacters"
                android:digits="0123456789TFncprlgi"
                android:importantForAutofill="no"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/play_seed_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:textSize="16sp"/>

</LinearLayout>
